--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     console:
       enabled: true
   datasource:
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:mem:userdb
     username: sa
     password:
     driverClassName: org.h2.Driver
@@ -11,8 +11,12 @@ spring:
     hibernate:
       ddl-auto: none
     database-platform: org.hibernate.dialect.H2Dialect
-    defer-datasource-initialization: true
+    open-in-view: false
   sql:
     init:
-      mode: always
+      schema-locations: classpath:schema.sql
+      data-locations: classpath:data.sql
 
+server:
+  error:
+    include-stacktrace: never
