--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>spring-rest-docts</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<name>spring-rest-docs</name>
-	<description>Demo project for Spring Boot</description>
+	<description>The purpose of this service is to provide a basic functionality for managing users and their possible accounts.</description>
 
 	<properties>
 		<java.version>11</java.version>
@@ -24,7 +24,7 @@
 		<projectlombok-version>1.18.20</projectlombok-version>
 	</properties>
 	<scm>
-		<url>https://github.com/spring-projects/spring-boot</url>
+		<url>https://github.com/dberna2/spring-rest-docs-gh-pages</url>
 	</scm>
 
 	<dependencies>
@@ -81,12 +81,6 @@
 			<artifactId>spring-restdocs-webtestclient</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>net.andreinc</groupId>
-			<artifactId>mockneat</artifactId>
-			<version>0.4.8</version>
-			<scope>test</scope>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -137,6 +131,9 @@
 							<attributes>
 								<snippets>${snippetsDirectory}</snippets>
 								<project-version>${project.version}</project-version>
+								<project-description>${project.description}</project-description>
+								<java-version>${java.version}</java-version>
+								<spring-boot-version>${parent.version}</spring-boot-version>
 								<scm-url>${scm.url}</scm-url>
 							</attributes>
 							<sourceDirectory>src/docs/asciidoc</sourceDirectory>
