--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
       - name: Build with Maven
-        run: ./mvnw -B clean verify
+        run: ./mvnw -B help:effective-settings
+
 
       - name: GitHub Pages action
         if: |
