--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    name: "Build api doc"
+    name: "Build API documentation"
     strategy:
       matrix:
         java: [ 11 ]
@@ -25,19 +25,11 @@ jobs:
       - name: maven-settings-xml-action
         uses: whelk-io/maven-settings-xml-action@v20
         with:
-          repositories: >
-            [
-              {
-                "id": "springframework-repository",
-                "name": "springframework-repository",
-                "url": "https://maven.springframework.org/milestone"
-              }
-            ]
           plugin_repositories: >
             [
               {
-                "id": "repository.spring.release",
-                "name": "spring.milestone",
+                "id": "spring.release",
+                "name": "spring.release",
                 "url": "https://repo.spring.io/plugins-release"
               }
             ]
@@ -46,9 +38,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
       - name: Build with Maven
-        run: ./mvnw -B clean verify
-
-
+        run: ./mvnw clean verify
       - name: GitHub Pages action
         if: |
           github.ref == 'refs/heads/master' &&
